0.12 - in development
-----------------------
 * qupdate: new command as simple front-end for stadard `bzr update`
 * qversion: new command to display Bazaar & Python installation information
 * Universal installer for Windows: one installer for both standalone bzr.exe
   version and for python-based version.


0.11.0 - 2009-06-11
-----------------------
Maintenance release: compatibility with bzr 1.16 (bencode releated changes),
improved performance of qlog, more fixes for side-by-side qdiff, a dozen of
various bugfixes.

Windows standalone installer for QBzr now built with Inno Setup.
Now user can install only main QBzr files without additional libraries
(e.g. PyQt4). So this installer now can be used to upgrade copy of QBzr plugin
installed as part of standalone bzr.exe installer.

 * qbrowse:
    * Fix problem with opening the log for file/directory. (#383192)
 * qinfo:
    * Add a basic help string (#384632)
 * qview command renamed to qviewer (previously qviewer was alias for qview)
   to avoid confusion with bzr views feature. (#385225)

NOTES: when upgrading your standalone installation of qbzr (on Windows) 
you should uninstall old QBzr first, and then re-install it from new installer.


0.10.0 - 2009-06-02
-----------------------
Maintenance release: log widget with revisions graph used in qannotate, 
and qcommit (to show pending merges); you can search for tags and bugs
in qlog; improvements to show qlog for multiple files or for dir content;
more context menus; various bugfixes.

 * qlog:
    * Added search for tags and bugs.
    * Fixed a bug with qlog FILE where it was not showing revisions if the
      revision that changed the file had been merge into another branch before
      it was merged into the mainline. (Bug #350166)
    * Fixed a bug when clicking refresh with multiple branches open.
      (Bug #351633)
    * When viewing a remote branch, qlog will load the revisions from local
      current directory if availible.